Add missing module export for jlink version